# Hunter

./: .replit  app.py  cli.py  config.py  demo.py  import_sigma_rules.py  main.py  pyproject.toml  routes.py  simple_demo.py  test_mitre.py  test_sigma.py  test_simple.py  test_splunk.py
attached_assets/: Pasted--2025-05-13-16-17-59-0000-7591-INFO-Handling-signal-winch-2025-05-13-16-17-59-0000-7591--1747153174986.txt  Pasted-1-Build-Analyst-Guided-Open-Hunting-Workflows-Goal-Help-analysts-hunt-without-writing-a-single-q-1747152982900.txt  Pasted-Build-a-threat-hunting-visualization-system-using-React-frontend-and-Python-FastAPI-backend-Inc-1746983386839.txt  Pasted-Build-a-threat-hunting-visualization-system-using-React-frontend-and-Python-FastAPI-backend-Inc-1746984324003.txt  Pasted-Build-a-threat-hunting-visualization-system-using-React-frontend-and-Python-FastAPI-backend-Inc-1746984531179.txt  Pasted-Build-a-threat-hunting-visualization-system-using-React-frontend-and-Python-FastAPI-backend-Inc-1746985628965.txt  Pasted-Great-question-this-is-a-real-challenge-in-automated-threat-hunting-when-the-system-returns--1747151870248.txt  Pasted-Great-question-this-is-a-real-challenge-in-automated-threat-hunting-when-the-system-returns--1747151882357.txt  Pasted-Yes-I-can-absolutely-help-you-implement-the-Phase-1-specs-in-Python-fully-adapted-for-Splunk-Sinc-1746918313000.txt
core/: ai_assistant.py  apt_manager.py  correlation_engine.py  field_mapper.py  field_profiler.py  hunt_manager.py  hunt_scheduler.py  mitre_parser.py  sigma_loader.py  splunk_query.py  ttp_mapper.py  (+3 more)
(+29 files in other folders)
