[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pysigma>=0.11.22",
    "pysigma-backend-splunk>=1.1.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sigma-cli>=1.0.6",
    "splunk-sdk>=2.1.0",
    "werkzeug>=3.1.3",
]
